--- a/htdocs/css/agency.css
+++ b/htdocs/css/agency.css
@@ -305,6 +305,7 @@ header .intro-text .intro-heading {
     }
 
     header .intro-text .intro-lead-in {
+        min-height: 40px;
         margin-bottom: 25px;
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 40px;
